--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ readme = "README.md"
 packages = [{include = "news_blog"}]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-flask = "^2.2.2"
+python = "3.10"
+flask = "2.2.2"
 
 
 [build-system]
