--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 packages = [{include = "news_blog"}]
 
 [tool.poetry.dependencies]
-python = "3.10"
+python = "3.10.7"
 flask = "2.2.2"
+flask-sqlalchemy = "3.0.2"
 
 
 [build-system]
