--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "news_blog"}]
 
 [tool.poetry.dependencies]
-python = "3.10.7"
+python = "^3.8"
 flask = "2.2.2"
 flask-sqlalchemy = "3.0.2"
 python-dotenv = "0.21.0"
@@ -15,5 +15,5 @@ flask-login = "0.6.2"
 
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.3.2"]
 build-backend = "poetry.core.masonry.api"
