--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = "2.2.2"
 flask-sqlalchemy = "3.0.2"
 python-dotenv = "0.21.0"
 flask-login = "0.6.2"
+psycopg2-binary = "2.9.5"
 
 
 [build-system]
