--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-sqlalchemy = "3.0.2"
 python-dotenv = "0.21.0"
 flask-login = "0.6.2"
 psycopg2-binary = "2.9.5"
+flask-migrate = "4.0.4"
 
 
 [build-system]
