--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python-dotenv = "0.21.0"
 flask-login = "0.6.2"
 psycopg2-binary = "2.9.5"
 flask-migrate = "4.0.4"
+wtforms = "3.0.1"
+email-validator = "1.3.1"
 
 
 [build-system]
