--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ psycopg2-binary = "2.9.5"
 flask-migrate = "4.0.4"
 wtforms = "3.0.1"
 email-validator = "1.3.1"
+flask-wtf = "1.1.1"
 
 
 [build-system]
