--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ flask-migrate = "4.0.4"
 wtforms = "3.0.1"
 email-validator = "1.3.1"
 flask-wtf = "1.1.1"
+flask-admin = "1.6.0"
 
 
 [build-system]
