--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-flask = "2.2.2"
-flask-sqlalchemy = "3.0.2"
+flask = "1.1.4"
+flask-sqlalchemy = "2.5.1"
 python-dotenv = "0.21.0"
 flask-login = "0.6.2"
 psycopg2-binary = "2.9.5"
@@ -18,6 +18,7 @@ wtforms = "3.0.1"
 email-validator = "1.3.1"
 flask-wtf = "1.1.1"
 flask-admin = "1.6.0"
+flask-combo-jsonapi = "^1.1.0"
 
 
 [build-system]
