--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,16 +9,22 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 flask = "1.1.4"
+werkzeug = "0.16.1"
+markupsafe = "2.0.1"
+python-dotenv = "0.17.1"
+click = "7.1.2"
 flask-sqlalchemy = "2.5.1"
-python-dotenv = "0.21.0"
-flask-login = "0.6.2"
-psycopg2-binary = "2.9.5"
-flask-migrate = "4.0.4"
-wtforms = "3.0.1"
-email-validator = "1.3.1"
-flask-wtf = "1.1.1"
-flask-admin = "1.6.0"
-flask-combo-jsonapi = "^1.1.0"
+flask-login = "0.5.0"
+flask-migrate = "3.0.0"
+psycopg2-binary = "2.8.6"
+wtforms = "2.3.3"
+flask-wtf = "0.15.1"
+email-validator = "1.1.2"
+flask-admin = "1.5.8"
+flask-combo-jsonapi = "1.1.0"
+combojsonapi = "1.1.1"
+apispec = "4.7.1"
+pyyaml = "5.4.1"
 
 
 [build-system]
